// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<GetStarted /> GetStarted for UPI should render 1`] = `
<Fragment>
  <Stack
    hasGutter={true}
  >
    <StackItem>
      <TextContent>
        <Text
          component="p"
        >
          The installer will take about 45 minutes to run. 
        </Text>
      </TextContent>
    </StackItem>
    <StackItem>
      <Button
        component="a"
        href=""
        onClick={[Function]}
        rel="noreferrer noopener"
        target="_blank"
        variant="secondary"
      >
        Get started
      </Button>
    </StackItem>
    <StackItem>
      <TelemetryDisclaimer />
    </StackItem>
  </Stack>
</Fragment>
`;

exports[`<GetStarted /> GetStarted w/ customizations should render 1`] = `
<Fragment>
  <Stack
    hasGutter={true}
  >
    <StackItem>
      <TextContent>
        <Text
          component="p"
        >
          The installer will take about 45 minutes to run. 
        </Text>
      </TextContent>
    </StackItem>
    <StackItem>
      <Button
        component="a"
        href=""
        onClick={[Function]}
        rel="noreferrer noopener"
        target="_blank"
        variant="secondary"
      >
        Get started
      </Button>
    </StackItem>
    <StackItem>
      <Text
        component="p"
      >
        To quickly create a cluster with the default options, run the following command:
      </Text>
      <ClipboardCopy
        additionalActions={null}
        clickTip="Successfully copied to clipboard!"
        entryDelay={300}
        exitDelay={1500}
        hoverTip="Copy to clipboard"
        id="copy-command"
        isCode={true}
        isExpanded={false}
        isReadOnly={true}
        maxWidth="150px"
        onChange={[Function]}
        onCopy={[Function]}
        ouiaSafe={true}
        position="top"
        removeFindDomNode={false}
        textAriaLabel="Copyable input"
        toggleAriaLabel="Show content"
        variant="inline"
      >
        ./openshift-install create cluster
      </ClipboardCopy>
    </StackItem>
    <StackItem>
      <TextContent>
        <Text
          component="p"
        >
          Refer to the documentation to
           
          <ExternalLink
            href="example.doc.link"
          >
            install with customizations
          </ExternalLink>
          .
        </Text>
      </TextContent>
    </StackItem>
    <StackItem>
      <TelemetryDisclaimer />
    </StackItem>
  </Stack>
</Fragment>
`;

exports[`<GetStarted /> GetStarted w/o customizations should render 1`] = `
<Fragment>
  <Stack
    hasGutter={true}
  >
    <StackItem>
      <TextContent>
        <Text
          component="p"
        >
          The installer will take about 45 minutes to run. 
        </Text>
      </TextContent>
    </StackItem>
    <StackItem>
      <Button
        component="a"
        href=""
        onClick={[Function]}
        rel="noreferrer noopener"
        target="_blank"
        variant="secondary"
      >
        Get started
      </Button>
    </StackItem>
    <StackItem>
      <Text
        component="p"
      >
        To quickly create a cluster with the default options, run the following command:
      </Text>
      <ClipboardCopy
        additionalActions={null}
        clickTip="Successfully copied to clipboard!"
        entryDelay={300}
        exitDelay={1500}
        hoverTip="Copy to clipboard"
        id="copy-command"
        isCode={true}
        isExpanded={false}
        isReadOnly={true}
        maxWidth="150px"
        onChange={[Function]}
        onCopy={[Function]}
        ouiaSafe={true}
        position="top"
        removeFindDomNode={false}
        textAriaLabel="Copyable input"
        toggleAriaLabel="Show content"
        variant="inline"
      >
        ./openshift-install create cluster
      </ClipboardCopy>
    </StackItem>
    <StackItem>
      <TelemetryDisclaimer />
    </StackItem>
  </Stack>
</Fragment>
`;
